src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>All_Day_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Enable_Pricing_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Pricing Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_RSVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable RSVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <description>Related Group ID</description>
        <label>GroupId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_URL__c</fullName>
        <label>Location URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <label>NetworkId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <summaryFilterItems>
            <field>Event_RSVP__c.Response__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_RSVP__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_URL__c</fullName>
        <label>Payment URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSVP_Count_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Only display number of attendees when that number is greater or equal to this value</description>
        <label>RSVP Count Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Price__c</fullName>
        <label>Ticket Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Information__c</fullName>
        <label>Venue Information</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Description__c</fullName>
        <description>Overall description of volunteer needs</description>
        <label>Volunteer Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Volunteers_Needed__c</fullName>
        <label>Volunteers Needed</label>
        <summarizedField>Volunteer_Need__c.Volunteers_Needed__c</summarizedField>
        <summaryForeignKey>Volunteer_Need__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteers_Registered__c</fullName>
        <label>Volunteers Registered</label>
        <summarizedField>Volunteer_Need__c.Volunteers_Registered__c</summarizedField>
        <summaryForeignKey>Volunteer_Need__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>7S Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_be_blank_when_RSVP_enabled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( RSVP_Count_Threshold__c ),
Enable_RSVP__c
)</errorConditionFormula>
        <errorDisplayField>RSVP_Count_Threshold__c</errorDisplayField>
        <errorMessage>RSVP Count Threshold must be set if RSVP is enabled.</errorMessage>
    </validationRules>
</CustomObject>